--- a/index.html
+++ b/index.html
@@ -9,88 +9,83 @@
 </head>
 
 <body>
-    <header class="header" data-testid="header">
-        <h1 data-testid="title">My Tech Goals</h1>
-        <p data-testid="subtitle">Charting a Path to Excellence in Technology: My Journey and Aspirations for the
-            Next 2 Years
+    <header class="header" id="header">
+        <h1 id="title">My Tech Goals</h1>
+        <p id="subtitle">Charting a Path to Excellence in Technology: My Journey and Aspirations for the Next 2
+            Years
         </p>
+        <p id="slackDisplayName">By: Adannaya</p>
     </header>
-    <main class="main" data-testid="main-content">
+    <main class="main" id="main-content">
         <div class="container">
-            <section class="intro" data-testid="intro">
-                <p>
-                    Hi, I'm Adanna Nnajiofor, Welcome to my journey in the world
-                    of technology! <br> Over the next two years, I am committed to pushing the boundaries of my
-                    knowledge
-                    and skills in this ever-evolving field. From mastering advanced programming concepts to contributing
-                    to
-                    impactful projects, my goals are driven by a passion for innovation and a desire to make a
-                    meaningful impact. <br>
-
-                    Join me as I outline my aspirations and milestones, aiming not just to meet expectations but to
-                    exceed them. Together, let's explore the exciting possibilities that lie ahead in my tech journey.
-                </p>
+            <section class="intro" id="intro">
+                <div>
+                    <img src="./assests/images/profile.jpg" alt="Slack Profile Picture" id="slackProfilePicture" />
+                </div>
+                <div>
+                    <p><strong>Hi, I'm Adanna Nnajiofor, Welcome to my journey in the world of technology!</strong></p>
+                    <p> Over the next two years, I am committed to pushing the boundaries of my knowledge and skills in
+                        this ever-evolving field. From mastering advanced programming concepts to contributing to
+                        impactful projects, my goals are driven by a passion for innovation and a desire to make a
+                        meaningful impact.
+                    </p>
+                    <p> Join me as I outline my aspirations and milestones, aiming not just to meet expectations but to
+                        exceed them. Together, let's explore the exciting possibilities that lie ahead in my tech
+                        journey.
+                    </p>
+                </div>
             </section>
             <section class="goals">
-                <div class="goal-div">
-                    <section class="goal" data-testid="goal-1">
-                        <h2 data-testid="goal-title-1">1. Master Advanced JavaScript</h2>
-                        <p data-testid="goal-description-1">Deepen my understanding of JavaScript, including javascript
-                            frameworks/library,
-                            asynchronous programming, and performance optimization techniques.
-                        </p>
-                    </section>
-                    <section class="goal" data-testid="goal-2">
-                        <h2 data-testid="goal-title-2">2. Contribute to Open Source Projects</h2>
-                        <p data-testid="goal-description-2">Actively participate in open source projects to improve my
-                            coding
-                            skills, collaborate with other developers, and contribute to the community.
-                        </p>
-                    </section>
-                    <section class="goal" data-testid="goal-3">
-                        <h2 data-testid="goal-title-3">3. Build a Personal Portfolio Website</h2>
-                        <p data-testid="goal-description-3">Create a stunning and responsive personal portfolio website
+                <div class="goal-container">
+                    <div class="goal" id="goal-1">
+                        <h2 id="goal-title-1">1. Master Advanced JavaScript</h2>
+                        <p id="goal-description-1">Deepen my understanding of JavaScript, including JavaScript
+                            frameworks/library, asynchronous programming, and performance optimization techniques.</p>
+                    </div>
+                    <div class="goal" id="goal-2">
+                        <h2 id="goal-title-2">2. Contribute to Open Source Projects</h2>
+                        <p id="goal-description-2">Actively participate in open source projects to improve my
+                            coding skills, collaborate with other developers, and contribute to the community.</p>
+                    </div>
+                    <div class="goal" id="goal-3">
+                        <h2 id="goal-title-3">3. Create captivating Websites</h2>
+                        <p id="goal-description-3">Design and develop visually stunning, responsive websites that engage
+                            users. Utilize modern design principles and the latest technologies to ensure fast, secure,
+                            and SEO-optimized websites for seamless user experiences.</p>
+                    </div>
+                </div>
+                <div class="goal-container">
+                    <div class="goal" id="goal-4">
+                        <h2 id="goal-title-4">4. Learn Backend Development</h2>
+                        <p id="goal-description-4">Expand my skill set by learning backend technologies like
+                            Node.js, Express, and databases to become a full-stack developer.</p>
+                    </div>
+                    <div class="goal" id="goal-5">
+                        <h2 id="goal-title-7">7. Network and Attend Tech Conferences</h2>
+                        <p id="goal-description-7">Stay updated with industry trends, network with professionals,
+                            and participate in workshops to enhance skills and knowledge.</p>
+                    </div>
+                    <div class="goal" id="goal-6">
+                        <h2 id="goal-title-6">6. Become Proficient in React and other Key Technologies.</h2>
+                        <p id="goal-description-6">Achieve advanced proficiency in React and other programming languages
                             to
-                            showcase my projects, skills, and experience as a frontend developer.
-                        </p>
-                    </section>
+                            build modern, responsive web applications with ease and efficiency.</p>
+                    </div>
                 </div>
-                <div class="goal-div">
-                    <section class="goal" data-testid="goal-4">
-                        <h2 data-testid="goal-title-4">4. Learn Backend Development</h2>
-                        <p data-testid="goal-description-4">Expand my skill set by learning backend technologies like
-                            Node.js,
-                            Express, and databases to become a full-stack developer.
-                        </p>
-                    </section>
-                    <section class="goal" data-testid="goal-5">
-                        <h2 data-testid="goal-title-5">5. Obtain Frontend Developer Certification</h2>
-                        <p data-testid="goal-description-5">Earn a recognized certification in frontend development to
-                            validate
-                            my skills and enhance my professional credentials.
-                        </p>
-                    </section>
-                    <section class="goal" data-testid="goal-6">
-                        <h2 data-testid="goal-title-6">6. Become Proficient in React and TailwindCSS</h2>
-                        <p data-testid="goal-description-6">Achieve advanced proficiency in React and TailwindCSS to
-                            build
-                            modern, responsive web applications with ease and efficiency.
-                        </p>
-                    </section>
-                </div>
-                <section class="goal" data-testid="goal-7">
-                    <h2 data-testid="goal-title-7">7. Network and attend other Tech conferences</h2>
-                    <p data-testid="goal-description-7">Stay updated with industry trends, network with professionals,
-                        and
-                        participate in workshops to enhance skills and knowledge.
-                    </p>
-                </section>
+
             </section>
         </div>
     </main>
-    <footer class="footer" data-testid="footer">
-        <p data-testid="footer-text">&copy; 2024 Adanna Nnajiofor. All rights reserved.</p>
+    <footer class="footer" id="footer">
+        <p id="footer-text">&copy; 2024 Adannaya. All rights reserved.</p>
+        <p id="slackEmail">Slack Email: adanna.nnajiofor@gmail.com</p>
+        <p id="currentTimeUTC">Current Time (UTC): </p>
+        <p id="currentDay">Current Day: </p>
+        <a href="https://hng.tech/learn" id="hngLink" target="_blank">HNG Learn</a>
+        <a href="https://keyword.dog" id="keywordLink" target="_blank">Keyword Dog</a>
+        <a href="https://scrapeanyweb.site" id="scrapeanywebLink" target="_blank">Scrape Any Web</a>
     </footer>
+    <script src="./script.js"></script>
 </body>
 
 </html>
