--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <main class="main" id="main-content">
         <div class="container">
             <section class="intro" id="intro">
-                <div>
+                <div class="profile-picture-container">
                     <img src="./assests/images/profile.jpg" alt="Slack Profile Picture" id="slackProfilePicture" />
                 </div>
-                <div>
+                <div class="intro-text">
                     <p><strong>Hi, I'm Adanna Nnajiofor, Welcome to my journey in the world of technology!</strong></p>
                     <p> Over the next two years, I am committed to pushing the boundaries of my knowledge and skills in
                         this ever-evolving field. From mastering advanced programming concepts to contributing to
@@ -36,43 +36,44 @@
                 </div>
             </section>
             <section class="goals">
-                <div class="goal-container">
-                    <div class="goal" id="goal-1">
-                        <h2 id="goal-title-1">1. Master Advanced JavaScript</h2>
-                        <p id="goal-description-1">Deepen my understanding of JavaScript, including JavaScript
-                            frameworks/library, asynchronous programming, and performance optimization techniques.</p>
-                    </div>
-                    <div class="goal" id="goal-2">
-                        <h2 id="goal-title-2">2. Contribute to Open Source Projects</h2>
-                        <p id="goal-description-2">Actively participate in open source projects to improve my
-                            coding skills, collaborate with other developers, and contribute to the community.</p>
-                    </div>
-                    <div class="goal" id="goal-3">
-                        <h2 id="goal-title-3">3. Create captivating Websites</h2>
-                        <p id="goal-description-3">Design and develop visually stunning, responsive websites that engage
-                            users. Utilize modern design principles and the latest technologies to ensure fast, secure,
-                            and SEO-optimized websites for seamless user experiences.</p>
-                    </div>
-                </div>
-                <div class="goal-container">
-                    <div class="goal" id="goal-4">
-                        <h2 id="goal-title-4">4. Learn Backend Development</h2>
-                        <p id="goal-description-4">Expand my skill set by learning backend technologies like
-                            Node.js, Express, and databases to become a full-stack developer.</p>
-                    </div>
-                    <div class="goal" id="goal-5">
-                        <h2 id="goal-title-7">7. Network and Attend Tech Conferences</h2>
-                        <p id="goal-description-7">Stay updated with industry trends, network with professionals,
-                            and participate in workshops to enhance skills and knowledge.</p>
-                    </div>
-                    <div class="goal" id="goal-6">
-                        <h2 id="goal-title-6">6. Become Proficient in React and other Key Technologies.</h2>
-                        <p id="goal-description-6">Achieve advanced proficiency in React and other programming languages
-                            to
-                            build modern, responsive web applications with ease and efficiency.</p>
-                    </div>
+                <h1>MY Goals</h1>
+                <div class="goal" id="goal-1">
+                    <h2 id="goal-title-1">1. Master Advanced JavaScript</h2>
+                    <p id="goal-description-1">Deepen my understanding of JavaScript, including JavaScript
+                        frameworks/library, asynchronous programming, and performance optimization techniques.</p>
                 </div>
 
+                <div class="goal" id="goal-2">
+                    <h2 id="goal-title-2">2. Contribute to Open Source Projects</h2>
+                    <p id="goal-description-2">Actively participate in open source projects to improve my
+                        coding skills, collaborate with other developers, and contribute to the community.</p>
+                </div>
+
+                <div class="goal" id="goal-3">
+                    <h2 id="goal-title-3">3. Create captivating Websites</h2>
+                    <p id="goal-description-3">Design and develop visually stunning, responsive websites that engage
+                        users. Utilize modern design principles and the latest technologies to ensure fast, secure,
+                        and SEO-optimized websites for seamless user experiences.</p>
+                </div>
+
+                <div class="goal" id="goal-4">
+                    <h2 id="goal-title-4">4. Learn Backend Development</h2>
+                    <p id="goal-description-4">Expand my skill set by learning backend technologies like
+                        Node.js, Express, and databases to become a full-stack developer.</p>
+                </div>
+
+                <div class="goal" id="goal-5">
+                    <h2 id="goal-title-7">7. Network and Attend Tech Conferences</h2>
+                    <p id="goal-description-7">Stay updated with industry trends, network with professionals,
+                        and participate in workshops to enhance skills and knowledge.</p>
+                </div>
+
+                <div class="goal" id="goal-6">
+                    <h2 id="goal-title-6">6. Become Proficient in React and other Key Technologies.</h2>
+                    <p id="goal-description-6">Achieve advanced proficiency in React and other programming languages
+                        to
+                        build modern, responsive web applications with ease and efficiency.</p>
+                </div>
             </section>
         </div>
     </main>
