--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         <p id="subtitle">Charting a Path to Excellence in Technology: My Journey and Aspirations for the Next 2
             Years
         </p>
-        <p id="slackDisplayName">By: Adannaya</p>
+        <p data-testid="slackDisplayName">By: Adannaya</p>
     </header>
     <main class="main" id="main-content">
         <div class="container">
             <section class="intro" id="intro">
                 <div class="profile-picture-container">
-                    <img src="./assests/images/profile.jpg" alt="Slack Profile Picture" id="slackProfilePicture" />
+                    <img src="./assests/images/profile.jpg" alt="Slack Profile Picture"
+                        data-testid="slackProfilePicture" class="slackProfilePicture" />
                 </div>
                 <div class="intro-text">
                     <p><strong>Hi, I'm Adanna Nnajiofor, Welcome to my journey in the world of technology!</strong></p>
@@ -78,13 +79,13 @@
         </div>
     </main>
     <footer class="footer" id="footer">
-        <p id="footer-text">&copy; 2024 Adannaya. All rights reserved.</p>
-        <p id="slackEmail">Slack Email: adanna.nnajiofor@gmail.com</p>
-        <p id="currentTimeUTC">Current Time (UTC): </p>
-        <p id="currentDay">Current Day: </p>
-        <a href="https://hng.tech/learn" id="hngLink" target="_blank">HNG Learn</a>
-        <a href="https://keyword.dog" id="keywordLink" target="_blank">Keyword Dog</a>
-        <a href="https://scrapeanyweb.site" id="scrapeanywebLink" target="_blank">Scrape Any Web</a>
+        <p data-testid="footer-text">&copy; 2024 Adannaya. All rights reserved.</p>
+        <p data-testid="slackEmail">Slack Email: adanna.nnajiofor@gmail.com</p>
+        <p data-testid="currentTimeUTC">Current Time (UTC): </p>
+        <p data-testid="currentDay">Current Day: </p>
+        <a href="https://hng.tech/learn" data-testid="hngLink" target="_blank">HNG Learn</a>
+        <a href="https://keyword.dog" data-testid="keywordLink" target="_blank">Keyword Dog</a>
+        <a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink" target="_blank">Scrape Any Web</a>
     </footer>
     <script src="./script.js"></script>
 </body>
