--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="intro" id="intro">
                 <div class="profile-picture-container">
                     <img src="./assests/images/profile.jpg" alt="Slack Profile Picture"
-                        data-testid="slackProfilePicture" class="slackProfilePicture" />
+                        data-testid="slackProfilePicture" class="slack-Profile-Picture" />
                 </div>
                 <div class="intro-text">
                     <p><strong>Hi, I'm Adanna Nnajiofor, Welcome to my journey in the world of technology!</strong></p>
@@ -79,7 +79,7 @@
         </div>
     </main>
     <footer class="footer" id="footer">
-        <p data-testid="footer-text">&copy; 2024 Adannaya. All rights reserved.</p>
+        <p data-testid="footer-text">&copy; 2024 Adanna. All rights reserved.</p>
         <p data-testid="slackEmail">Slack Email: adanna.nnajiofor@gmail.com</p>
         <p data-testid="currentTimeUTC">Current Time (UTC): </p>
         <p data-testid="currentDay">Current Day: </p>
